--- a/src/app/_components/utilities/list/list.scss
+++ b/src/app/_components/utilities/list/list.scss
@@ -11,6 +11,18 @@
       }
     }
   }
+
+  &--body {
+    &-grid {
+      display: grid;
+      gap: 1.5rem;
+      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    }
+  }
+
+  &--loader {
+    min-height: 320px;
+  }
 }
 
 
