--- a/src/app/_components/utilities/filters/filters.html
+++ b/src/app/_components/utilities/filters/filters.html
@@ -51,7 +51,7 @@
       <div class="col-12">
         <div class="flex pt-5 filters__bottom align-items-center justify-content-between">
           <div>
-<!--            <flexmile-input label="Pokaż tylko dostępne od ręki" inputId="only_available" [type]="inputType.checkbox" [control]="offersService.filtersForm.get('available')"></flexmile-input>-->
+            <flexmile-input label="Pokaż tylko dostępne od ręki" inputId="available_immediately" [type]="inputType.checkbox" formControlName="available_immediately"></flexmile-input>
           </div>
           <div><span class="cursor-pointer" (click)="resetFilters()">Wyczyść filtry</span></div>
         </div>
