--- a/src/app/_components/utilities/input/input.scss
+++ b/src/app/_components/utilities/input/input.scss
@@ -86,10 +86,10 @@ input {
     + label {
       -webkit-user-select: none;
       user-select: none;
-      display: flex;
-      align-items: flex-start;
       justify-content: center;
       font-weight: 400;
+      display: flex;
+      align-items: center;
       @include mixins.fontSize(12);
       line-height: 18px;
       cursor: pointer;
