--- a/src/app/_components/utilities/list/list.scss
+++ b/src/app/_components/utilities/list/list.scss
@@ -23,5 +23,35 @@
   &--loader {
     min-height: 320px;
   }
+
+  &--load-more {
+    position: relative;
+    margin-top: 2rem;
+    min-height: 1px;
+
+    &-active {
+      padding-bottom: 2rem;
+    }
+
+    &-status {
+      margin-top: 1.5rem;
+    }
+
+    &-error {
+      gap: 1rem;
+
+      &-message {
+        margin-bottom: 1rem;
+        color: var(--color-black-700);
+      }
+    }
+  }
+
+  .list--sentinel {
+    display: block;
+    width: 100%;
+    height: 1px;
+    pointer-events: none;
+  }
 }
 
