--- a/src/app/_components/home-page/_components/homepage-list/homepage-list.html
+++ b/src/app/_components/home-page/_components/homepage-list/homepage-list.html
@@ -5,6 +5,7 @@
         @if (item.type === 'banner' && item.bannerIndex !== undefined) {
           <div class="banner">
             <flexmile-banner-list
+              [separator]="''"
               [label]="getBanner(item.bannerIndex).label"
               [description]="getBanner(item.bannerIndex).description"
               position="center">
