--- a/src/app/_components/utilities/banner-list/banner-list.html
+++ b/src/app/_components/utilities/banner-list/banner-list.html
@@ -16,10 +16,7 @@
         <div class="list-banner--template">
           <ng-container [ngTemplateOutlet]="bannerTemplate()!" />
         </div>
-      } @else {
-        {{ label() }} {{ separator() }}&nbsp;
-      }
-
+      } @else {{{ label() }} {{ separator() }}}
     </span>
     @if(!bannerTemplate()){
     <span class="list-banner--description">{{ description() }}</span>
