--- a/src/app/_components/utilities/list/list.scss
+++ b/src/app/_components/utilities/list/list.scss
@@ -13,10 +13,22 @@
   }
 
   &--body {
+    padding-bottom: 120px;
     &-grid {
       display: grid;
-      gap: 1.5rem;
-      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 32px;
+
+      .product,
+      .product-full,
+      .banner {
+        width: 100%;
+      }
+
+      .product-full,
+      .banner {
+        grid-column: 1 / -1;
+      }
     }
   }
 
