--- a/src/app/_components/home-page/_components/faq/faq.html
+++ b/src/app/_components/home-page/_components/faq/faq.html
@@ -1,4 +1,4 @@
-<section class="pb-7 faq">
+<section class="pb-7 faq" id="faq">
     <h2 class="pb-7 text-center">Najczęściej zadawane pytania</h2>
     <div class="faq-list">
       @for (faq of faqObject; let i = $index; track i) {
