--- a/src/app/_components/home-page/_components/opinions/opinions.html
+++ b/src/app/_components/home-page/_components/opinions/opinions.html
@@ -1,4 +1,4 @@
-<div class="opinions py-7">
+<div class="opinions py-7" id="opinions">
   <div class="container dreams pb-5">
     <div class="grid mt-0">
       <div class="col-4">
