--- a/src/app/_components/home-page/_components/why-us/why-us.html
+++ b/src/app/_components/home-page/_components/why-us/why-us.html
@@ -1,5 +1,5 @@
 <div class="why-us">
-  <div class="container borders pb-7">
+  <div class="container borders pb-7" id="how-it-works">
     <div>
       <div class="flex justify-content-center py-7">
         <svg xmlns="http://www.w3.org/2000/svg" width="409" height="80" viewBox="0 0 409 80" fill="none">
@@ -172,7 +172,7 @@
       </div>
     </div>
   </div>
-  <div class="container why pb-7">
+  <div class="container why pb-7" id="why-us">
     <div>
       <h2>Dlaczego warto wybrać Flexmile?</h2>
       <div class="description">
