--- a/src/app/_components/utilities/footer/footer.html
+++ b/src/app/_components/utilities/footer/footer.html
@@ -1,4 +1,4 @@
-<footer id="footer">
+<footer id="footer" [ngClass]="{'with-contact-form' : !hideContactForm()}">
   <div class="container">
     <div class="grid mt-0">
       <div class="col-7">
