--- a/src/app/_components/utilities/player/player.scss
+++ b/src/app/_components/utilities/player/player.scss
@@ -13,7 +13,7 @@
   justify-content: flex-start;
   gap: 12px;
   cursor: pointer;
-
+  z-index: 90;
   &--label {
     color: var(--p-primary-900);
     font-weight: 600;
