--- a/src/app/_components/offer-new/_components/offer-order/offer-order.scss
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.scss
@@ -91,13 +91,16 @@
       .right_subtitle {
         line-height: 24px;
       }
-      .right_img{
+
+      .right_img {
         max-height: 276px;
-        img{
+
+        img {
           display: block;
           width: 100%;
         }
       }
+
       .right_price {
         color: var(--p-primary-900);
         font-weight: 600;
@@ -114,24 +117,34 @@
 
 }
 
-:host ::ng-deep .order-input {
-  input {
-    border-color: var(--color-black-200) !important;
+:host ::ng-deep {
+  .order-input {
+    input {
+      border-color: var(--color-black-200) !important;
+    }
+  }
+
+  .right_consents {
+    label {
+      align-items: flex-start !important;
+    }
   }
 }
 
-.order-modal{
-  .model{
+.order-modal {
+  .model {
     font-weight: 500;
     @include mixins.fontSize(20);
     line-height: 24px;
   }
-  .title{
+
+  .title {
     @include mixins.fontSize(32);
     line-height: 40px;
     font-weight: 600;
   }
-  span{
+
+  span {
     color: var(--color-black-700);
     @include mixins.fontSize(14);
     line-height: 24px;
