--- a/src/app/_components/utilities/car/car.html
+++ b/src/app/_components/utilities/car/car.html
@@ -3,11 +3,17 @@
     @if (!offer().available) {
       <flexmile-badge [type]="badgeTypes.RESERVED"  [size]="cardSize()"></flexmile-badge>
     } @else {
+      @if (offer().attributes.popular) {
+        <flexmile-badge [type]="badgeTypes.HOT"  [size]="cardSize()"></flexmile-badge>
+      }
       @if (offer().attributes.available_immediately) {
         <flexmile-badge [type]="badgeTypes.AVAILABLE"  [size]="cardSize()"></flexmile-badge>
       }
       @if (offer().attributes.coming_soon) {
         <flexmile-badge [type]="badgeTypes.SOON" [date]="offer().coming_soon_date"  [size]="cardSize()"></flexmile-badge>
+      }
+      @if (offer().attributes.new) {
+        <flexmile-badge [type]="badgeTypes.NEW"  [size]="cardSize()"></flexmile-badge>
       }
     }
   </div>
