--- a/src/app/_components/utilities/car/car.scss
+++ b/src/app/_components/utilities/car/car.scss
@@ -56,6 +56,7 @@
       justify-content: flex-start;
       gap: 8px;
       position: absolute;
+      z-index: 10;
     }
 
     .car-card__specs {
