--- a/src/app/_components/offer-new/_components/offer-details/offer-details.html
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.html
@@ -24,7 +24,7 @@
             <span class="block pb-3">
               {{ details().specs.engine ? details().specs.engine + ', ' : '' }}{{ details().specs.engine_capacity }} cm³
             </span>
-            <div class="offer__body-info-header-specs flex align-items-center">
+            <div class="offer__body-info-header-specs flex align-items-center pb-3">
               <div>
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                   <path
