zmiany + maintenance page

--- a/src/app/_components/home-page/_components/why-us/why-us.html
+++ b/src/app/_components/home-page/_components/why-us/why-us.html
@@ -57,7 +57,7 @@
           <span>Przeglądasz dostępne oferty i wybierasz model, który najbardziej Ci odpowiada  — wszystko online, w kilka minut.</span>
         </div>
         <div class="animation _l">
-          <flexmile-animation height="60px" width="380px"></flexmile-animation>
+          <flexmile-animation height="50px" width="360px"></flexmile-animation>
         </div>
         <div>
           <div class="pb-4 flex justify-content-center">
@@ -102,7 +102,7 @@
           <span>Nasz doradca kontaktuje się z Tobą, aby potwierdzić wszystkie szczegóły – wysokość raty, okres najmu i sposób odbioru auta.</span>
         </div>
         <div class="animation _r">
-          <flexmile-animation height="60px" width="380px"></flexmile-animation>
+          <flexmile-animation height="50px" width="360px" animationPath="/layout/lottie/lines2.json"></flexmile-animation>
         </div>
         <div>
           <div class="pb-4 flex justify-content-center">
