--- a/src/app/_components/offers/offers.html
+++ b/src/app/_components/offers/offers.html
@@ -11,3 +11,6 @@
     </div>
   </div>
 </div>
+
+<flexmile-player [label]="'Oferta w 30s.'"
+                 [fileName]="'milo_cie_widziec.m4a'"></flexmile-player>
