--- a/src/app/_components/offer-new/_components/offer-order/offer-order.scss
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.scss
@@ -76,6 +76,43 @@
       background: var(--color-black-50);
       border-radius: var(--border-radius-base);
 
+      .right_label {
+        background: var(--p-primary-900);
+        border-radius: 16px;
+        padding: 14px 16px;
+
+        &.soon {
+          background: var(--color-black-100);
+
+          b {
+            color: var(--color-black-700) !important;
+          }
+
+          span {
+            color: var(--color-black-600) !important;
+          }
+        }
+
+        & > div {
+          display: flex;
+          justify-content: flex-start;
+          align-items: flex-start;
+          gap: 16px;
+
+          b {
+            line-height: 24px;
+            color: var(--color-white);
+            font-weight: 600;
+          }
+
+          span {
+            @include mixins.fontSize(14);
+            line-height: 24px;
+            color: var(--color-white);
+          }
+        }
+      }
+
       .right_id {
         @include mixins.fontSize(12);
         color: var(--color-black-700);
