--- a/src/app/_components/utilities/footer/footer.scss
+++ b/src/app/_components/utilities/footer/footer.scss
@@ -4,16 +4,18 @@ footer {
   background: var(--p-primary-900);
   padding-top: 120px;
   &.with-contact-form {
-    position: relative;
-    overflow: hidden;
-    &:before{
-      content: '';
-      position: absolute;
-      width: 516px;
-      height: 328px;
-      background: url('../../../../../public/layout/images/car-footer.webp') no-repeat scroll center center / cover;
-      bottom:-45px;
-      left:33%;
+    & > div{
+      position: relative;
+      overflow: hidden;
+      &:before{
+        content: '';
+        position: absolute;
+        width: 516px;
+        height: 328px;
+        background: url('../../../../../public/layout/images/car-footer.webp') no-repeat scroll center center / cover;
+        bottom:-45px;
+        left:270px;
+      }
     }
   }
 
